--- a/.travis.yml
+++ b/.travis.yml
@@ -29,9 +29,11 @@ before_install:
 script:
   - export DATE=$(date +'%Y%m%d%H%M%S')
   - export BUILD_VERSION=1.$DATE
-  - export BUILD_DATE=$(date "+%Y%m%d")    
+  - export BUILD_DATE=$(date "+%Y%m%d")
+  - export ARCH=$(basename $ARCHITECTURE)
   - ls
-  - docker run -v $PWD:/tmp $ARCHITECTURE /bin/sh -c "cd /tmp; ls; cmake . -DBUILD_LUA=OFF -DMINOR=${DATE}; make -j1; make package"  
+  - docker run -v $PWD:/tmp $ARCHITECTURE /bin/sh -c "cd /tmp; ls; cmake . -DBUILD_LUA=OFF -DMINOR=${DATE}; make -j1; make package"
+  - cp $PACKAGE_NAME-1.$DATE-Linux.deb $PACKAGE_NAME-1.$DATE-Linux_$ARCH.deb 
 
 before_deploy:
   # Set the packages name and details in the descriptor file
@@ -40,14 +42,14 @@ before_deploy:
   - sed -i "s/__SUBJECT__/$BINTRAY_USER/g" bintray-descriptor.json
   - sed -i "s/__LICENSE__/$BINTRAY_LICENSE/g" bintray-descriptor.json
   - sed -i "s/__VERSION__/$BUILD_VERSION/g" bintray-descriptor.json
-  - sed -i "s/__ARCHITECTURE__/$(basename $ARCHITECTURE)/g" bintray-descriptor.json
+  - sed -i "s/__ARCHITECTURE__/$ARCH/g" bintray-descriptor.json
   - git tag "${DATE}" || true
 
 deploy:
   - provider: releases
     api_key: $GITHUB_API_KEY
     file_glob: true
-    file: ubox-*-Linux.deb
+    file: ubox-*-Linux_$ARCH.deb 
     skip_cleanup: true
     on:
       branch: master
