--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,8 @@ env:
   - BINTRAY_REPO_NAME=debian
   - BINTRAY_LICENSE=ISC
   matrix:
-  - ARCHITECTURE=ubuntu/trusty/amd64
-  - ARCHITECTURE=ubuntu/trusty/i386  
+  - ARCHITECTURE=trusty/amd64
+  - ARCHITECTURE=trusty/i386  
 sudo: required
 
 services:
@@ -31,9 +31,10 @@ script:
   - export BUILD_VERSION=1.$DATE
   - export BUILD_DATE=$(date "+%Y%m%d")
   - export ARCH=$(basename $ARCHITECTURE)
+  - export DIST=$(dirname $ARCHITECTURE)
   - ls
   - docker run -v $PWD:/tmp $ARCHITECTURE /bin/sh -c "cd /tmp; ls; cmake . -DBUILD_LUA=OFF -DMINOR=${DATE}; make -j1; make package"
-  - cp $PACKAGE_NAME-1.$DATE-Linux.deb $PACKAGE_NAME-1.$DATE-Linux_$ARCH.deb 
+  - cp $PACKAGE_NAME-1.$DATE-Linux.deb $PACKAGE_NAME-1.$DATE-$DIST_$ARCH.deb 
 
 before_deploy:
   # Set the packages name and details in the descriptor file
@@ -43,6 +44,7 @@ before_deploy:
   - sed -i "s/__LICENSE__/$BINTRAY_LICENSE/g" bintray-descriptor.json
   - sed -i "s/__VERSION__/$BUILD_VERSION/g" bintray-descriptor.json
   - sed -i "s/__ARCHITECTURE__/$ARCH/g" bintray-descriptor.json
+  - sed -i "s/__DIST__/$ARCH/g" bintray-descriptor.json
   - git tag "${DATE}" || true
 
 deploy:
