--- a/.travis.yml
+++ b/.travis.yml
@@ -44,7 +44,7 @@ before_deploy:
   - sed -i "s/__LICENSE__/$BINTRAY_LICENSE/g" bintray-descriptor.json
   - sed -i "s/__VERSION__/$BUILD_VERSION/g" bintray-descriptor.json
   - sed -i "s/__ARCHITECTURE__/$ARCH/g" bintray-descriptor.json
-  - sed -i "s/__DIST__/$ARCH/g" bintray-descriptor.json
+  - sed -i "s/__DIST__/$DIST/g" bintray-descriptor.json
   - git tag "${DATE}" || true
 
 deploy:
