--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ script:
   - export ARCH=$(basename $ARCHITECTURE)
   - export DIST=$(dirname $ARCHITECTURE)
   - docker run -v $PWD:/tmp $ARCHITECTURE /bin/sh -c "cd /tmp; cmake . -DBUILD_LUA=OFF -DMINOR=${DATE}; make -j1; make package"
-  - cp $PACKAGE_NAME-1.$DATE-Linux.deb $PACKAGE_NAME-1.$DATE-$DIST_$ARCH.deb 
+  - cp ${PACKAGE_NAME}-1.${DATE}-Linux.deb ${PACKAGE_NAME}-1.${DATE}-${DIST}_${ARCH}.deb 
 
 before_deploy:
   # Set the packages name and details in the descriptor file
@@ -44,6 +44,7 @@ before_deploy:
   - sed -i "s/__VERSION__/$BUILD_VERSION/g" bintray-descriptor.json
   - sed -i "s/__ARCHITECTURE__/$ARCH/g" bintray-descriptor.json
   - sed -i "s/__DIST__/$DIST/g" bintray-descriptor.json
+  - cat bintray-descriptor.json
   - git tag "${DATE}" || true
 
 deploy:
